*****  Sun Jan  6 13:08:42 CLT 2019  *****

Finished drafting a decent bibtex.rst docs page.

*****

Unified one-liner descriptions between main and command help menus.
Change 'bibkey' to 'key' in bibm search output.
Edit docs to refer to 'config params' rather than config keys (to
avoid confusion with the BibTeX's key).

*****

Drafted latex.rst docs page.
Revised a few details in bibtex.rst and command-line docs.

*****

Drafted ads.rst docs page.
Fixed typos and style here and there.

*****

Fixed bug in am.add_bibtex(), assign updated key to new Bib() object
when updated from arxiv to peer-reviewed.

*****

Drafted faq.rst docs page.
Added link to BibTeX naming format in search docs.


*****  Mon Jan  7 18:21:04 CLT 2019  *****

Tweaked ads-add parser to split bibcode and key into two arguments.
Unified ads-search argparse docs with sphinx docs.
Fixed bibm search usage's text to be consistent with docs.

*****

Bumped bibmanager version to 0.5.0.
This next merge closes #10

*****

Added bibcode to Bib() object.

*****

Updated Bib.published() to check with bibcode instead of adsurl.
Updated bm.merge() and bm.loadfile() to check duplicates by bibcode
instead of adsurl.

*****

Added script to prefer peer-reviewed over arxiv entries in
remove_duplicates() function.

*****

Changed indentation in bm.remove_duplicates() func to four spaces.

*****

Updated am.update() to look directly at bibcodes.
Updated bibcode extraction in Bib.__init__() to remove any backslash.
Added bibcode in cli_search() report.
Updated sphinx and argparse docs according to adsurl/bibcode changes.

*****

Updated bibmanager url in bm.export().

*****

Bumped bibmanager version to 0.5.1.
This next merge closes #17

*****

Added key and bibcode arguments to bm.search() function.

*****

Updated cli_search() function to incorporate new search fields to
command-line interface.
Updated search argparse and sphinx docs.

*****

Bumped bibmanager version to 0.5.2.
This next merge closes #19

*****
